View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0021317 | Open CASCADE | OCCT:Modeling Algorithms | public | 2009-08-11 14:11 | 2013-12-19 13:56 |
Reporter | Assigned To | ika | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | All | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0021317: Face cannot be fixed by Shape Healing | ||||
Description | The attached face cannot be fixed by Shape Healing. It comes from exercise from OCCT training on Shape Healing and should normally be fixed well. This is likely to be regression. > restore faulty.brep a > fixshape r a > checkshape r ===> Problems | ||||
Tags | No tags attached. | ||||
Test case number | bugs heal(017) bug21317 | ||||
2009-08-11 12:11
|
faulty.brep (35,117 bytes) |
|
Fix that face, in which only wire was reordered during shape healing, was not replaced. Branch CR21317 is ready to be reviewed. Dear GKA, Please review. |
|
Branch CR21317 is ready to be tested. |
|
Dear BugMaster, Branch CR21317 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: c4dc0edaee4f893548261787e7b91627b9130c97 Number of compiler warnings: occt component : Linux: 2 (2 on master) Windows: 11 (11 on master) products component : Linux: 0 (0 on master) Windows: 64 (64 on master) Regressions: http://occt-tests/CR21317-master-occt/Windows-32-VC9/summary.html http://occt-tests/CR21317-master-occt/Debian60-64/summary.html bugs heal(017) bug209 bugs iges(003) bug272_3, bug283 bugs modalg_1(006) bug1077 bugs step(014) bug55, bug348_3 bugs xde(005) bug5439, bug22535_1, bug22535_2 de iges_1(001) A1, A6, A8, C8, D1, F9, G6, I8, J9, K3, K8, K9, L7, L8, M1, N9, O2, O3, O4, O5, P2, P4, P5, Q5, R4, R8 de iges_2(002) A1, A9, B6, B8, C3, C5, D2, D8, E6, E7, F4, F7, G1, G4, G5, G7, H4, H5, I1, I3, I4, J1 de iges_3(003) A1, A4, A5, A7, A8, A9, B2 de step_1(004) C3, D1, E3, G9, J6, N6, ZA6, ZB3, ZB4, ZB5, ZH1, ZN2, ZY4 de step_2(005) A3, A7, B5, B7, D8, F4, J5, M2, O3, O8, O9, Q9, R7, S2, T7, V6, W6, X2, X3, X5, Y5 de step_3(006) A2, A5, A9, B8, C6, D8, D9, E6, E7, E8, F3,F4 de step_4(007) A1, A8, E6, E7, F1, G6 de step_5(008) A1, A7 heal drop_small_edges(006) A5 heal fix_face_size(004) A6, B2, B8, C1 heal fix_gaps(002) B3 heal fix_shape(001) A1, A9, B4, B5, B7, C5, F7, G2, G3, G4 heal split_angle(007) A7, B2, B3, B5 heal split_angle_advanced(013) A1, B1, B3, C4, C5, D6, E2, E6, E7, E8, F5, F6, J8, L4, M8, R5, R6, R9, ZF4 heal split_angle_standard(014) A1, A2, A3, A7, A9, E8, K9, N6, X5, Y8, ZC4, ZF2, ZG4, ZG7, ZH1, ZJ6, ZJ8, ZO4, ZV4, ZW3, ZW9 heal split_closed_faces(011) A2, B2, B6, B7, B9, D8, E6, E7, F3 heal surface_to_revolution_advanced(017) A1, B2, B3, B6, B9, C1, C2, C3, C4, C6, C8, D4, D7, D8, D9, E1, E2, E5, F4, F5, F6, F7, F8, G7, G8, H1, H2, H5, H7, I1, I2, I3, I6, I8, I9, J1, J2, J3, J4, J5, J8, J9, K7, L2, L4, L5, L7, M1, M4, M8, M9, N1, N2, N3, N4, N5, N8, N9, O3, O4, P1, Q3, Q5, Q6, Q8, Q9, R2, R3, R4, R5, R6, R9, S2, S3, S6, S9, T7, T8, W1, ZF1, ZF2, ZF4, ZF7, ZF8 heal surface_to_revolution_standard(018) A2, A3, A7, A9, B2, C6, D7, D8, E1, E2, E3, E4, E6, E9, F1, F2, F5, F8, G1, G3, H6, H9, I3, I4, I5, I7, J1, J2, J6, J8, K3, M2, M3, M4, N5, O5, O6, O9, P4, P5, Q4, Q6, R9, S3, U1, U2, V1, V4, V8, W7, W9, X1, X2, X5, X6, X7, X8, X9, Y1, Y2, Y6, Z3, Z4, Z9, ZA2, ZA4, ZA6, ZA7, ZA9, ZB3,ZB5, ZB6, ZB8, ZB9, ZC1, ZC2, ZC6, ZD3, ZD4, ZD6, ZD9, ZE2, ZE3, ZE4, ZE8, ZE9, ZF1, ZF2, ZF3,ZF6, ZG2, ZG3, ZG5, ZG6, ZG8, ZH1, ZH2, ZH3, ZH4, ZH6, ZH8, ZI3, ZI7, ZI9, ZJ2, ZJ4, ZJ5, ZJ7, ZK2, ZK7, ZK8, ZL1, ZL3, ZL4, ZL5, ZL8, ZL9, ZM1,ZM3, ZM7, ZM8, ZM9, ZN4, ZN6, ZN7, ZN8, ZO1, ZO3, ZO4, ZO5, ZO7, ZP2, ZP5, ZP6, ZP7, ZQ2, ZQ3, ZQ4, ZQ8, ZR1, ZR9, ZS5, ZS6, ZS9, ZU2, ZV3, ZV4, ZV5, ZW2, ZW3, ZW6, ZW7, ZX4, ZY4, ZY8 xcaf brep_to_stp_add_CL(009) A4, D9, E1 Improvements: No improvements Testing cases: bugs heal(017) bug21317 - OK. Testing on Linux: Total MEMORY difference: 339342176 / 339189872 Total CPU difference: 36255.520000000586 / 38431.47000000079 Testing on Windows: Total MEMORY difference: 395326032 / 396989788 Total CPU difference: 22505.3125 / 26579.90625 There are not differences in images found by testdiff. http://occt-tests/CR21317-master-occt/Debian60-64/diff-Debian60-64.html http://occt-tests/CR21317-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html IMAGE bugs xde bug2: bug22535_1.png differs IMAGE bugs xde bug2: bug22535_2.png differs IMAGE bugs moddata_1 bug22757: bug22757.png differs IMAGE heal surface_to_bezier C5: C5.png differs IMAGE heal surface_to_bezier C6: C6.png differs IMAGE heal surface_to_bezier E2: E2.png differs IMAGE heal surface_to_bezier E9: E9.png differs IMAGE heal surface_to_bezier F4: F4.png differs IMAGE heal surface_to_bezier F5: F5.png differs IMAGE heal split_angle_standard ZG6: ZG6.png differs IMAGE heal split_angle_standard ZG9: ZG9.png differs IMAGE heal fix_gaps A5: A5.png differs IMAGE heal fix_gaps A6: A6.png differs IMAGE heal fix_gaps B1: B1.png differs IMAGE heal fix_gaps B2: B2.png differs IMAGE heal surface_to_revolution_standard K9: K9.png differs IMAGE heal surface_to_revolution_standard C4: C4.png differs IMAGE heal surface_to_revolution_standard C5: C5.png differs IMAGE heal surface_to_revolution_advanced D2: D2.png differs IMAGE heal surface_to_revolution_advanced E6: E6.png differs IMAGE heal surface_to_revolution_advanced E7: E7.png differs IMAGE heal surface_to_revolution_advanced E8: E8.png differs IMAGE heal surface_to_revolution_advanced E9: E9.png differs IMAGE heal surface_to_revolution_advanced F1: F1.png differs IMAGE heal surface_to_revolution_advanced F2: F2.png differs IMAGE heal surface_to_revolution_advanced F3: F3.png differs IMAGE heal split_continuity_standard C5: C5.png differs |
|
Add status for shifted wires in reordering. Branch CR21317 is ready to be reviewed. Dear GKA, Please review. |
|
Branch CR21317 is ready to be tested. |
|
Dear BugMaster, Branch CR21317 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 5c3887153b27d6be2b7f3a82db956fcedbf89bd6 Number of compiler warnings: occt component : Linux: 942 (945 on master) Windows: 954 (954 on master) products component : Linux: 189 (189 on master) Windows: 288 (288 on master) Regressions: de step_1 E3 http://occt-tests/CR21317-master-occt/Debian60-64/de/step_1/E3.html http://occt-tests/CR21317-master-occt/Windows-32-VC9/de/step_1/E3.html Improvements: No improvements Testing cases: bugs heal bug21317 - OK Testing on Linux: Total MEMORY difference: 364366852 / 364435616 Total CPU difference: 44561.050000000116 / 45730.32000000074 Testing on Windows: Total MEMORY difference: 425103124 / 426458448 Total CPU difference: 40957.59375 / 37319.375 There are not differences in images found by testdiff. |
|
Dear APN, This test isn't a regression. It fails because NBSHAPES became different to reference data, but in old version some wires were splitted incorrectly during writing and second reading, and one of solids lost. After fix the result of the first reading and the second are equal. So I think, that test script should be updated. |
|
Test case de/step_1/E3 was modified according to new reference data. |
occt: master 673693f1 2013-08-01 08:34:52 Details Diff |
0021317: Face cannot be fixed by Shape Healing Fix that face, in which only wire was reordered during shape healing, was not replaced. Add test case for this fix Add status for shifted wires in reordering. Modified test case de/step_1/E3 according to new reference data |
Affected Issues 0021317 |
|
mod - src/ShapeAnalysis/ShapeAnalysis_Wire.cxx | Diff File | ||
mod - src/ShapeAnalysis/ShapeAnalysis_WireOrder.cxx | Diff File | ||
mod - src/ShapeFix/ShapeFix_Face.cxx | Diff File | ||
mod - src/ShapeFix/ShapeFix_Wire.cxx | Diff File | ||
add - tests/bugs/heal/bug21317 | Diff File | ||
mod - tests/de/step_1/E3 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2009-08-11 14:40 |
|
CC | => gka |
2011-08-02 11:31 | bugmaster | Category | OCCT:MOA => OCCT:Modeling Algorithms |
2013-04-29 09:28 |
|
Assigned To | bugmaster => ika |
2013-04-29 09:28 |
|
Status | new => assigned |
2013-05-16 11:29 | ika | Note Added: 0024414 | |
2013-05-16 11:29 | ika | Assigned To | ika => gka |
2013-05-16 11:29 | ika | Status | assigned => resolved |
2013-05-21 10:58 |
|
Note Added: 0024446 | |
2013-05-21 10:58 |
|
Status | resolved => reviewed |
2013-05-21 11:17 |
|
Assigned To | gka => mkv |
2013-05-22 17:54 |
|
Note Added: 0024474 | |
2013-05-22 17:54 |
|
Test case number | => bugs heal(017) bug21317 |
2013-05-22 17:54 |
|
Assigned To | mkv => bugmaster |
2013-05-22 17:54 |
|
Status | reviewed => tested |
2013-05-22 17:54 |
|
Fixed in Version | EMPTY => |
2013-05-22 17:54 |
|
Description Updated | |
2013-05-23 12:40 | bugmaster | Target Version | => 6.7.0 |
2013-05-23 14:34 |
|
Assigned To | bugmaster => ika |
2013-05-23 14:34 |
|
Status | tested => assigned |
2013-07-25 11:49 | ika | Note Added: 0025153 | |
2013-07-25 11:49 | ika | Assigned To | ika => gka |
2013-07-25 11:49 | ika | Status | assigned => resolved |
2013-07-25 12:13 |
|
Note Added: 0025155 | |
2013-07-25 12:13 |
|
Status | resolved => reviewed |
2013-07-25 12:18 | apn | Assigned To | gka => apn |
2013-07-26 11:27 | apn | Note Added: 0025167 | |
2013-07-26 11:28 | apn | Assigned To | apn => ika |
2013-07-26 11:28 | apn | Status | reviewed => assigned |
2013-07-30 10:52 | ika | Note Added: 0025199 | |
2013-07-30 10:52 | ika | Assigned To | ika => apn |
2013-07-30 10:52 | ika | Status | assigned => feedback |
2013-07-30 11:39 | apn | Note Added: 0025200 | |
2013-07-30 11:39 | apn | Assigned To | apn => bugmaster |
2013-07-30 11:39 | apn | Status | feedback => tested |
2013-08-02 13:20 | ika | Changeset attached | => occt master 673693f1 |
2013-08-02 13:20 | ika | Assigned To | bugmaster => ika |
2013-08-02 13:20 | ika | Status | tested => verified |
2013-08-02 13:20 | ika | Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:56 | bugmaster | Fixed in Version | => 6.7.0 |